k8s/base/oci-native-ingress-controller.yaml
---
# Source: oci-native-ingress-controller/templates/deployment.yaml
#
# OCI Native Ingress Controller
#
# Copyright (c) 2023 Oracle America, Inc. and its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
#
apiVersion: v1
kind: Namespace
metadata:
  name: native-ingress-controller-system
---
# Source: oci-native-ingress-controller/templates/service.yaml
#
# OCI Native Ingress Controller
#
# Copyright (c) 2023 Oracle America, Inc. and its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
#
apiVersion: v1
kind: Service
metadata:
  name: release-name-oci-native-ingress-controller
  namespace: native-ingress-controller-system
  labels:
    helm.sh/chart: oci-native-ingress-controller-1.4.2
    app.kubernetes.io/name: oci-native-ingress-controller
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.4.2"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: webhook-server
      port: 443
      protocol: TCP
      targetPort: webhook-server
  selector:
    app.kubernetes.io/name: oci-native-ingress-controller
    app.kubernetes.io/instance: release-name
---
# Source: oci-native-ingress-controller/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-oci-native-ingress-controller
  namespace: native-ingress-controller-system
  labels:
    helm.sh/chart: oci-native-ingress-controller-1.4.2
    app.kubernetes.io/name: oci-native-ingress-controller
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.4.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: oci-native-ingress-controller
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oci-native-ingress-controller
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-oci-native-ingress-controller
      automountServiceAccountToken: true
      volumes:
        - name: cert
          secret:
            defaultMode: 420
            secretName: release-name-oci-native-ingress-controller-tls
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: oci-native-ingress-controller
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          image: "ghcr.io/oracle/oci-native-ingress-controller:v1.4.2"
          imagePullPolicy: Always
          args:
            - --lease-lock-name=oci-native-ingress-controller
            - --lease-lock-namespace=native-ingress-controller-system
            - --authType=instance
            - --auth-secret-name=oci-config
            - --controller-class=oci.oraclecloud.com/native-ingress-controller
            - --compartment-id=
            - --subnet-id=
            - --cluster-id=
            - --metrics-backend=prometheus
            - --metrics-port=2223
            - --v=4
            - --use-lb-compartment-for-certificates=false
            - --emit-events=false
            - --cert-deletion-grace-period-in-days=0
          ports:
            - name: webhook-server
              containerPort: 9443
              protocol: TCP
            - name: metrics-server
              containerPort: 2223
          resources: {}
          volumeMounts:
            - mountPath: /tmp/k8s-webhook-server/serving-certs
              name: cert
              readOnly: true
      priorityClassName: "system-cluster-critical"
---
# Source: oci-native-ingress-controller/templates/pdb.yaml
#
# OCI Native Ingress Controller
#
# Copyright (c) 2023 Oracle America, Inc. and its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
#
---
# Source: oci-native-ingress-controller/templates/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: release-name-oci-native-ingress-controller-webhook
  labels:
    helm.sh/chart: oci-native-ingress-controller-1.4.2
    app.kubernetes.io/name: oci-native-ingress-controller
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.4.2"
    app.kubernetes.io/managed-by: Helm
  annotations:
    cert-manager.io/inject-ca-from: native-ingress-controller-system/oci-native-ingress-controller-webhook-serving-cert
webhooks:
  - clientConfig:
      service:
        name: release-name-oci-native-ingress-controller
        namespace: native-ingress-controller-system
        path: /mutate-v1-pod
    failurePolicy: Fail
    name: podreadiness.ingress.oraclecloud.com
    admissionReviewVersions:
      - v1beta1
    namespaceSelector:
      matchExpressions:
        - key: podreadiness.ingress.oraclecloud.com/pod-readiness-gate-inject
          operator: In
          values:
            - enabled

    objectSelector:
      matchExpressions:
        - key: app.kubernetes.io/name
          operator: NotIn
          values:
            - oci-native-ingress-controller
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
